[package]
name = "WillBotRust"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.28", features = ["json"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }